# fls

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  main.rs  mode.rs  task.rs  tasks.rs  theme.rs  ui.rs
