[package]
name = "fls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["tokio", "pure"] }
iced_native = { git = "https://github.com/iced-rs/iced/", branch = "master" }
# iced_futures = { path = "../../futures" }

tokio = { version = "1", features = ["fs", "rt"] }
futures = "0.3.21"
ouroboros = "0.15.0"

fuzzy-matcher = "0.3.7"
open = "2.1.3"
